--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database connection properties
 quarkus.datasource.jdbc.url = jdbc:oracle:thin:@//0.0.0.0:1521/XEPDB1
 quarkus.datasource.jdbc.driver=oracle.jdbc.driver.OracleDriver
-quarkus.datasource.username = mdeveloper
-quarkus.datasource.password = mdeveloper
+quarkus.datasource.username = 
+quarkus.datasource.password = 
 quarkus.datasource.db-kind = oracle
 
 
